# fade

./: .gitignore  README.md  pyproject.toml  setup.py  setup.sh
src/fade/: __init__.py  pipeline.ipynb  pipeline.py
src/fade/config/: __init__.py  ocr.py  ocr_config.json  test_ocr_config.py  update_ocr_config.py
